--- a/scc.yaml
+++ b/scc.yaml
@@ -17,17 +17,8 @@ metadata:
   generation: 1
   labels:
     app: splunk-otel-collector
-    app.kubernetes.io/instance: bn-logging
-    app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/name: splunk-otel-collector
-    app.kubernetes.io/version: 0.82.0
-    chart: splunk-otel-collector-0.82.0
-    helm.sh/chart: splunk-otel-collector-0.82.0
-    heritage: Helm
-    release: bn-logging
-  name: bn-splunk
-  resourceVersion: "313328962"
-  uid: 4f84aa69-63d9-4dce-9445-8b74f57d52cc
+    app.kubernetes.io/instance: test-logging
+  name: test
 priority: 10
 readOnlyRootFilesystem: true
 requiredDropCapabilities:
@@ -43,8 +34,6 @@ seLinuxContext:
   type: MustRunAs
 supplementalGroups:
   type: RunAsAny
-users:
-- system:serviceaccount:bn-logging:bn-splunk
 volumes:
 - configMap
 - downwardAPI
